engine/tests/detection_corpus/bad/secret_slack_token.py
client = WebClient(token="__CORPUS_SECRET__")
